<resources>
    <string name="app_name">TalkJunction</string>
    <string name="image_description">AppLogo</string>
    <string name="chatPage">Chat</string>
    <string name="interest_text_placeholder">Type your message…</string>

    <string name="email_field">Email</string>
    <string name="password_input_field">Password</string>

    <string name="log_in_btn">Log In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="start_connecting_to_another_user">Connect</string>
    <string name="end_chat_btn">End chat</string>
    <string name="send_txt_btn">Send</string>

    <string name="header_home_page">Choose Interest</string>

    <string name="google_btn">Sign in with Google</string>

    <string name="addInterestEditTextPlaceholder">Type in a topic…</string>

    <string name="optionFirst">Artificial Intelligence</string>
    <string name="optionTwo">Call of Duty</string>
    <string name="optionThree">NASA</string>

    <string name="updateTopicChoices">Save this choice</string>

    <string name="server_client_id">270425780801-j9jg17id64vcp6v0cripv13235ftj5eu.apps.googleusercontent.com</string>


</resources>