<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme_color"
    tools:context="net.app.talkjunction.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="208dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toTopOf="@+id/emailTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642"
        app:srcCompat="@drawable/app_logo" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="text|textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/secondary_theme_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/password_input_field"
        android:inputType="text|textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/secondary_theme_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
        app:layout_constraintVertical_bias="0.798">

        <Button
            android:id="@+id/googleLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/google_btn_background_color"
            android:drawableLeft="@drawable/android_light_rd_na"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:paddingRight="12dp"
            android:paddingBottom="10dp"
            android:text="@string/google_btn"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/secondary_theme_color"
            android:text="@string/log_in_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/secondary_theme_color"
            android:text="@string/sign_up_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="0dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
